Guard against entities not existing on the client